Changelog
---------

v7.3.1:
 SportsTracker changes:
 ExerciseViewer changes:
 - Garmin TCX parser: added support for run cadence sensors (issue #154)
   (no need to add to Garmin FIT parser, already supported there)

v7.3.0:
 SportsTracker changes:
  - removed invalid version numbers from french and spanish translations
  - bugfix #51 for importing HRM exercise files: import duration only, when no
    distance is being recorded for the selected sport type
  - Export of all SportsTracker application data to a SQLite database,
    provides much more capabilities for data analysis, statistics or migration
    (for advanced users with SQL skills, see README.txt for documentation)
  - added generic filter for all entry types, note and weight entries are now
    filterable too (user can select the filter type in the filter dialog)
  - updated ControlsFX to version 8.40.12
    (provides bugfixes and solves JDK compatibility issues)
  - updated JDOM to version 2.0.6 (bugfixes)
  - updated JUnit to version 4.12
  - updated Mockito to version 1.10.19
 ExerciseViewer changes:
  - Pull Request #9: Improved support for Garmin Fenix (2) exercise files, the
    missing max speed, avg and max heartrate are now calculated
    (contributed by Alexander Rampp <alex@axgr.de>)
  - updated map viewer component JXMapViewer2 to version 2.2 (bugfixes)

v7.2.0:
 SportsTracker changes:
  - Native SportsTracker packages are now containing all documentation files
    (README, LICENSE, CHANGES, AUTHORS, ...)
  - Native SportsTracker packages are displaying the GPLv2 license text before
    installation (tested on Mac OS X)
  - Exercise Dialog: preselection of sport type and subtype when adding new
    exercises, if there is only one choice
  - update of ControlFX to 8.40.10 for compatibility to Java 8u60+
  - updated javafx-maven-plugin to version 8.2.0
    - simpler inclusion of additional app resources
    - GPL license is displayed before installation (Mac / Windows)