@@ -2,9 +2,9 @@
 # SportsTracker resources for english language (default)
 # 
 # Version: SportsTracker 7.3.1
-# Last update: 2016/09/05
+# Last update: 2017/02/26
 # 
-# (C) 2016, Stefan Saring
+# (C) 2017, Stefan Saring
 #####################################################################
 
 application.title=SportsTracker
@@ -436,6 +436,7 @@ st.dlg.options.show_equipment.text=Equipment
 st.dlg.options.show_comment.text=Comment
 st.dlg.options.diagram.text=Diagram
 st.dlg.options.second_graph.text=Show two graphs initially on available data
+st.dlg.options.smoothed_charts.text=Show smoothed charts (average filter)
 
 # About dialog
 st.dlg.about.title=About SportsTracker
