@@ -1,10 +1,10 @@
 #####################################################################
 # SportsTracker resources for german language
 # 
-# Version: SportsTracker 7.3.0
-# Last update: 2016/09/05
+# Version: SportsTracker 7.3.1
+# Last update: 2017/02/26
 # 
-# (C) 2015, Stefan Saring
+# (C) 2017, Stefan Saring
 # Translated by Stefan Saring <projects@saring.de>
 #####################################################################
 
@@ -435,6 +435,7 @@ st.dlg.options.show_equipment.text=Ausr\u00FCstung
 st.dlg.options.show_comment.text=Bemerkung
 st.dlg.options.diagram.text=Diagramm
 st.dlg.options.second_graph.text=bei vorhandenen Daten initial 2 Graphen anzeigen
+st.dlg.options.smoothed_charts.text=gegl\u00E4ttete Graphen anzeigen (Durchschnitt)
 
 # About dialog
 st.dlg.about.title=Info zu SportsTracker
