@@ -4,6 +4,10 @@ Changelog
 v7.3.1:
  SportsTracker changes:
  ExerciseViewer changes:
+ - Preferences: renamed option for displaying a secondary chart
+   => some users can loose their previous preferences, needs to be set again
+ - Preferences: added option for displaying smoothed charts
+   => some users can loose their previous preferences, needs to be set again
  - Garmin TCX parser: added support for run cadence sensors (issue #154)
    (no need to add to Garmin FIT parser, already supported there)
 
